--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
            - "8090:8090"
        volumes:
            # 将本地目录映射到docker容器内的fastdfs数据存储目录，将fastdfs文件存储到主机上，以免每次重建docker容器，之前存储的文件就丢失了。
-           - /tmp/example.jpg:/var/www/nginx/images/example.jpg
+#           - /tmp/example.jpg:/var/www/nginx/images/example.jpg
            - /home/docker/www/wwwroot/docker-data/fdfs/storage:/var/www/nginx/images
            - /home/docker/www/wwwroot/zc.com/Uploads:/var/www/nginx/images/zc
 #           - ./nginximgserver/files/nginx.conf:/etc/nginx/nginx.conf
