决断登录状态TOKEN用WEBSOCKET验证 登录状态正确未过期的返回1，否则返回0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,23 +34,23 @@ services:
        stdin_open: true
        tty: true
        privileged: true
-       entrypoint: ["php", "/var/www/swoft/bin/swoft", "start"]
-
-    swoft-ws:
-       image: swoft/swoft:latest
-       container_name: swoft-ws
-#       build: ./
-       ports:
-         - "9099:80"
-       links:
-         - kevin:kevins
-       volumes:
-         - ./:/var/www/swoft
-       restart: always
-       stdin_open: true
-       tty: true
-       privileged: true
        entrypoint: ["php", "/var/www/swoft/bin/swoft", "ws:start"]
+
+#    swoft-ws:
+#       image: swoft/swoft:latest
+#       container_name: swoft-ws
+##       build: ./
+#       ports:
+#         - "9099:80"
+#       links:
+#         - kevin:kevins
+#       volumes:
+#         - ./:/var/www/swoft
+#       restart: always
+#       stdin_open: true
+#       tty: true
+#       privileged: true
+#       entrypoint: ["php", "/var/www/swoft/bin/swoft", "ws:start"]
 
     samba:
        image: dperson/samba
