--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
     kevin:
-       image: registry.cn-hangzhou.aliyuncs.com/liufee/feehi
+       image: registry.cn-hangzhou.aliyuncs.com/liufee/feehi:latest
        container_name: kevins
        ports:
          - "80:80"
@@ -12,6 +12,8 @@ services:
          - "3306:3306"
          - "27017:27017"
        restart: always
+       links:
+        - elasticsearch:elasticsearch
        privileged: true
        volumes:
          - /home/docker/etc/nginx:/etc/nginx
@@ -20,14 +22,25 @@ services:
          - /home/docker/data/log:/var/log
          - /home/docker/www:/usr/local/nginx/html
 
+
+    elasticsearch:
+       image: kevin0217/elasticsearch:2.3.5
+       container_name: elasticsearch
+       ports:
+         - "9200:9200"
+         - "9300:9300"
+       restart: always
+       privileged: true
+
+
     swoft:
        image: swoft/swoft:latest
        container_name: swoft
 #       build: ./
        ports:
          - "81:80"
-       links:
-         - kevin:kevins
+       # links:
+         # - kevin:kevins
        volumes:
          - ./:/var/www/swoft
        restart: always
@@ -63,32 +76,32 @@ services:
        command: '-u "root;kevin" -s "kevinhome;/mount/;yes;no;yes;all;all;all" -w "WORKGROUP" -g "force user=root" -g "guest account=root"'
        restart: always
 
-    nginxImageServer:
-    #原图路径 http://192.168.5.181:808/images/example.jpg
-    #裁剪后的路径 http://192.168.5.181:808/small_light(dh=200,da=l,ds=s)/images/example.jpg
-       # build: .
-       image: kevin0217/nginx-image-server:latest
-       # 该容器是否需要开机启动+自动重启。若需要，则取消注释。
-       restart: always
-       container_name: nginxImageServer
-       environment:
-           # nginx服务端口
-           - WEB_PORT=808
-           - SERVER_NAME=img.com
-       ports:
-           - "808:80"
-           - "8090:8090"
-       volumes:
-           # 将本地目录映射到docker容器内的fastdfs数据存储目录，将fastdfs文件存储到主机上，以免每次重建docker容器，之前存储的文件就丢失了。
-#           - /tmp/example.jpg:/var/www/nginx/images/example.jpg
-           - /home/docker/www/wwwroot/docker-data/fdfs/storage:/var/www/nginx/images
-           - /home/docker/www/wwwroot/zc.com/Uploads:/var/www/nginx/images/zc
-#           - ./nginximgserver/files/nginx.conf:/etc/nginx/nginx.conf
-#           - ./nginximgserver/files/mime.types:/etc/nginx/mime.types
-#           - ./nginximgserver/files/validator.pm:/opt/nginx/perl/lib/validator.pm
+    # nginxImageServer:
+    # #原图路径 http://192.168.5.181:808/images/example.jpg
+    # #裁剪后的路径 http://192.168.5.181:808/small_light(dh=200,da=l,ds=s)/images/example.jpg
+       # # build: .
+       # image: kevin0217/nginx-image-server:latest
+       # # 该容器是否需要开机启动+自动重启。若需要，则取消注释。
+       # restart: always
+       # container_name: nginxImageServer
+       # environment:
+           # # nginx服务端口
+           # - WEB_PORT=808
+           # - SERVER_NAME=img.com
+       # ports:
+           # - "808:80"
+           # - "8090:8090"
+       # volumes:
+           # # 将本地目录映射到docker容器内的fastdfs数据存储目录，将fastdfs文件存储到主机上，以免每次重建docker容器，之前存储的文件就丢失了。
+# #           - /tmp/example.jpg:/var/www/nginx/images/example.jpg
+           # - /home/docker/www/wwwroot/docker-data/fdfs/storage:/var/www/nginx/images
+           # - /home/docker/www/wwwroot/zc.com/Uploads:/var/www/nginx/images/zc
+# #           - ./nginximgserver/files/nginx.conf:/etc/nginx/nginx.conf
+# #           - ./nginximgserver/files/mime.types:/etc/nginx/mime.types
+# #           - ./nginximgserver/files/validator.pm:/opt/nginx/perl/lib/validator.pm
 
-           #- ./conf.d:/etc/nginx/conf.d/:rw
-       # 使docker具有root权限以读写主机上的目录
-       privileged: true
-       # 网络模式为host，即直接使用主机的网络接口
-       command: '/opt/nginx/sbin/nginx'
+           # #- ./conf.d:/etc/nginx/conf.d/:rw
+       # # 使docker具有root权限以读写主机上的目录
+       # privileged: true
+       # # 网络模式为host，即直接使用主机的网络接口
+       # command: '/opt/nginx/sbin/nginx'
